kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: account-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: account-service
