kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: account-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: account.lucurlings.nl
      http:
        paths:
          - backend:
              serviceName: account-service
              servicePort: 80
